--- a/PO/phpMussel-es.po
+++ b/PO/phpMussel-es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Project-Id-Version: phpMussel v0.9.2\n"
+"Project-Id-Version: phpMussel v1.0.0\n"
 
 # "bad_command"
 #, fuzzy
@@ -19,7 +19,7 @@ msgstr "No entiendo ese comando, lo siento."
 # This is a list of commands supplied to the user by the program. Only change command descriptions! Don't change command aliases/names!
 #, fuzzy
 msgid " q\n - Quit CLI.\n - Aliases: quit, exit.\n md5_file\n - Generate MD5 signatures from files [Syntax: md5_file filename].\n - Alias: m.\n md5\n - Generate MD5 signature from string [Syntax: md5 string].\n hex_encode\n - Convert binary string to hexadecimal [Syntax: hex_encode string].\n - Alias: x.\n hex_decode\n - Convert hexadecimal to binary string [Syntax: hex_decode string].\n base64_encode\n - Convert binary string to base64 string [Syntax: base64_encode string].\n - Alias: b.\n base64_decode\n - Convert base64 string to binary string [Syntax: base64_decode string].\n scan\n - Scan file or directory [Syntax: scan filename].\n - Alias: s.\n update\n - Update phpMussel.\n - Alias: u.\n c\n - Print this command list.\n"
-msgstr " q\n - Dejar CLI.\n - Alias: quit, exit.\n md5_file\n - Generar MD5 firmas de archivos [Sintaxis: md5_file nombre_de_archivo].\n - Alias: m.\n md5\n - Generar MD5 firma de string [Sintaxis: md5 string].\n hex_encode\n - Convertir binaria string a hexadecimal [Sintaxis: hex_encode string].\n - Alias: x.\n hex_decode\n - Convertir hexadecimal a binaria string [Sintaxis: hex_decode string].\n base64_encode\n - Convertir binaria string a base64 string [Sintaxis: base64_encode string].\n - Alias: b.\n base64_decode\n - Convertir base64 string a binaria string [Sintaxis: base64_decode string].\n scan\n - Analizar archivo o directorio [Sintaxis: scan nombre_de_archivo].\n - Alias: s.\n update\n - Actualizar phpMussel.\n - Alias: u.\n c\n - Imprimir esta lista de comandos.\n"
+msgstr " q\n - Dejar CLI.\n - Alias: quit, exit.\n md5_file\n - Generar firmas MD5 de archivos [Sintaxis: md5_file \"nombre de archivo\"].\n - Alias: m.\n md5\n - Generar firma de string [Sintaxis: md5 string].\n hex_encode\n - Convertir string binaria a hexadecimal [Sintaxis: hex_encode string].\n - Alias: x.\n hex_decode\n - Convertir hexadecimal a string binaria [Sintaxis: hex_decode string].\n base64_encode\n - Convertir string binaria a string base64 [Sintaxis: base64_encode string].\n - Alias: b.\n base64_decode\n - Convertir string base64 a string binaria [Sintaxis: base64_decode string].\n scan\n - Analizar archivo o directorio [Sintaxis: scan \"nombre de archivo\"].\n - Alias: s.\n c\n - Imprimir esta lista de comandos."
 
 # "cli_failed_to_complete"
 #, fuzzy
@@ -35,27 +35,22 @@ msgstr " no es un archivo o directorio."
 # "cli_ln2"
 #, fuzzy
 msgid " Thank you for using phpMussel, a PHP script designed to detect trojans,\n viruses, malware and other threats within files uploaded to your system\n wherever the script is hooked, based on the signatures of ClamAV and others.\n\n PHPMUSSEL COPYRIGHT 2013 and beyond GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
-msgstr " Gracias por usar phpMussel, un PHP script diseñado para detectar troyanos,\n virus, malware y otras amenazas en los archivos subidos en el sistema donde el\n script está adjunto, basado en las firmas de ClamAV y otros.\n PHPMUSSEL COPYRIGHT 2013 and beyond GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
+msgstr " Gracias por usar phpMussel, un script PHP diseñado para detectar troyanos,\n virus, malware y otras amenazas en los archivos subidos al sistema dónde el\n script está adjunto, basado en las firmas de ClamAV y otros.\n PHPMUSSEL COPYRIGHT 2013 and beyond GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
 
 # "cli_ln3"
 #, fuzzy
 msgid " Currently running phpMussel in CLI mode (command line interface).\n\n To scan a file or directory, type 'scan', followed by the name of the file or\n directory that you want phpMussel to scan and press Enter; Type 'c' and press\n Enter for a list of CLI mode commands; Type 'q' and press Enter to quit:"
-msgstr " Corrientemente phpMussel en ejecución en modo CLI (comandos línea interfaz).\n\n Para analizar un archivo o directorio, escribir 'scan', seguido por el nombre\n del archivo o directorio que usted desea phpMussel para escanear y pulse Enter;\n Escribir 'c' y pulse Enter para obtener una lista de CLI modo comandos;\n Escribir 'q' y pulse Enter para salir:"
+msgstr " Ud. está ejecutando phpMussel en modo CLI (interfaz de línea de comandos).\n\n Para analizar un archivo o directorio, escribir 'scan', seguido por el nombre\n del archivo o directorio que usted desea que phpMussel escanee y pulse Enter;\n Escriba 'c' y pulse Enter para obtener una lista de comandos;\n Escriba 'q' y pulse Enter para salir:"
 
 # "cli_pe1"
 #, fuzzy
 msgid "Not a valid PE file!"
-msgstr "No es un válido PE archivo!"
+msgstr "No es un archivo PE válido!"
 
 # "cli_pe2"
 #, fuzzy
 msgid "PE Sections:"
-msgstr "PE Secciones:"
-
-# "cli_update_restart"
-#, fuzzy
-msgid " Restarting phpMussel may be required before updates become apparent."
-msgstr " Reinicio phpMussel puede ser requerido antes de las actualizaciones se hacen\n evidentes."
+msgstr "Secciones PE:"
 
 # "cli_working"
 #, fuzzy
@@ -65,27 +60,27 @@ msgstr "En operación"
 # "controls_lockout"
 #, fuzzy
 msgid "phpMussel controls lockout enabled."
-msgstr "phpMussel controles bloqueos habilitadas."
+msgstr "Bloqueo de controles de phpMussel habilitado."
 
 # "core_scriptfile_missing"
 #, fuzzy
 msgid "Core script file missing! Please reinstall phpMussel."
-msgstr "Núcleo script archivo está ausente! Por favor, reinstalar phpMussel."
+msgstr "No se encontró el archivo del script principal! Por favor, reinstale phpMussel."
 
 # "corrupted"
 #, fuzzy
 msgid "Detected corrupted PE"
-msgstr "Detectado corrompido PE"
+msgstr "PE corrompido detectado"
 
 # "denied"
 #, fuzzy
 msgid "Upload Denied!"
-msgstr "Carga Negado!"
+msgstr "Subida Denegada!"
 
 # "denied_reason"
 #, fuzzy
 msgid "Your upload was blocked for the reasons listed below"
-msgstr "Intento de subida ha sido bloqueada por las razones que se indican a continuación"
+msgstr "La subida de archivo fue bloqueada por las razones que se indican a continuación"
 
 # "detected"
 # Don't remove "{vn}"; Just translate "Detected". This string is used by the program to report to the user when something is detected. For example, if the program detects a virus named "V1rus123", {vn} will be populated by the name and the program will return (using the string) a message like "Detected V1rus123!"
@@ -96,18 +91,18 @@ msgstr "Detectado {vn}"
 # "detected_control_characters"
 #, fuzzy
 msgid "Detected control characters"
-msgstr "Caracteres de control detectados"
+msgstr "Caracteres control detectados"
 
 # "encrypted_archive"
 #, fuzzy
 msgid "Detected encrypted archive; Encrypted archives not permitted"
-msgstr "Detectado archivo encriptado; Archivos encriptados no permitidos"
+msgstr "Archivo encriptado detectado; No se permiten archivos encriptados"
 
 # "failed_to_access"
 # Rendered as "Failed to access %FILENAME%"
 #, fuzzy
 msgid "Failed to access "
-msgstr "No se pudo acceso "
+msgstr "Falló el acceso "
 
 # "file"
 #, fuzzy
@@ -319,172 +314,6 @@ msgstr "Iniciado"
 #, fuzzy
 msgid "Too many URLs"
 msgstr "Demasiados URLs"
-
-# "update_"
-#, fuzzy
-msgid "phpMussel will now attempt to update itself."
-msgstr "phpMussel ahora intentará actualización."
-
-# "update_available"
-#, fuzzy
-msgid "A script update is available."
-msgstr "Una script actualización está disponible."
-
-# "update_complete"
-#, fuzzy
-msgid "Update check completed successfully."
-msgstr "Actualización verificación completada con éxito."
-
-# "update_created"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% created".
-#, fuzzy
-msgid "created"
-msgstr "creado"
-
-# "update_deleted"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% deleted".
-#, fuzzy
-msgid "deleted"
-msgstr "borrado"
-
-# "update_err1"
-#, fuzzy
-msgid "Failed to update: 'update.dat' missing. Reinstall or update manually."
-msgstr "No actualizado: 'update.dat' ausenta. Reinstalar o actualizar manualmente."
-
-# "update_err2"
-#, fuzzy
-msgid "Failed to update: 'update.dat' does not contain any valid update sources. Please update manually."
-msgstr "No actualizado: 'update.dat' no contiene cualquier válido fuente de actualización. Por favor, actualizar manualmente."
-
-# "update_err3"
-#, fuzzy
-msgid "Possible hack or forgery detected in the update instructions supplied by the update source; Source may possibly be compromised. Please notify the script author. Updating manually is recommended."
-msgstr "Posible hackeo o falsificación detectada en las actualización instrucciones suministrados por la actualización fuente; Fuente ser posible comprometida. Por favor, notifique al autor de la script. Se recomienda actualizar manualmente."
-
-# "update_err4"
-#, fuzzy
-msgid "Missing checksum!"
-msgstr "Checksum ausentas!"
-
-# "update_err5"
-#, fuzzy
-msgid "Missing data!"
-msgstr "Datos ausentas!"
-
-# "update_err6"
-#, fuzzy
-msgid "Bad data!"
-msgstr "Datos malos!"
-
-# "update_err7"
-#, fuzzy
-msgid "Bad checksum!"
-msgstr "Checksum malos!"
-
-# "update_failed"
-#, fuzzy
-msgid "Failed."
-msgstr "Fracasado."
-
-# "update_fetch"
-#, fuzzy
-msgid "Attempting to fetch version data from"
-msgstr "Intentar para obtener la versión datos de"
-
-# "update_lock_detected"
-#, fuzzy
-msgid "Update lock detected: Can't continue. Check for corrupt updates or try again later."
-msgstr "Actualización bloqueo detectado: No puede continuar. Buscar para actualizaciones corruptas o inténtelo de nuevo más tarde."
-
-# "update_not"
-# Used with "created", "deleted" and "patched" to negate them. Only translate the "NOT", don't remove the "{x}". Rendered like "%FILENAME% NOT created", "%FILENAME% NOT deleted", "%FILENAME% NOT patched".
-#, fuzzy
-msgid "NOT {x}"
-msgstr "NO {x}"
-
-# "update_not_available"
-#, fuzzy
-msgid "No script update is available at this time."
-msgstr "No script actualización está disponible en este momento."
-
-# "update_not_possible"
-#, fuzzy
-msgid "A script update is available, but can't be fully updated with this version of the update script. Please update manually."
-msgstr "Una script actualización está disponible, pero no puede ser completamente actualizada con esta versión de la script de actualización. Por favor, actualizar manualmente."
-
-# "update_no_source"
-#, fuzzy
-msgid "phpMussel has failed to update itself because it could not connect to a valid update source. Updating manually is recommended."
-msgstr "phpMussel ha fracasado de actualización porque no se pudo conectar a una válido actualización fuente. Se recomienda actualizar manualmente."
-
-# "update_patched"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% patched".
-#, fuzzy
-msgid "patched"
-msgstr "parcheado"
-
-# "update_scriptfile_missing"
-#, fuzzy
-msgid " Update script file missing! Please reinstall phpMussel."
-msgstr " Actualización script archivo faltan! Por favor, reinstalar phpMussel."
-
-# "update_seconds_elapsed"
-# Rendered alongside integer second timers, eg, "5 seconds elapsed".
-#, fuzzy
-msgid " seconds elapsed"
-msgstr " segundos transcurridos"
-
-# "update_signatures_available"
-#, fuzzy
-msgid "A signatures update is available."
-msgstr "Una actualización de firmas está disponible."
-
-# "update_signatures_latest"
-#, fuzzy
-msgid "LATEST SIGNATURES"
-msgstr "ÚLTIMAS FIRMAS"
-
-# "update_signatures_not_available"
-#, fuzzy
-msgid "No signatures update is available at this time."
-msgstr "No actualización de firmas está disponible en este momento."
-
-# "update_signatures_yours"
-#, fuzzy
-msgid "YOUR SIGNATURES"
-msgstr "SUS FIRMAS"
-
-# "update_success"
-#, fuzzy
-msgid "Success."
-msgstr "Éxito."
-
-# "update_successfully"
-#, fuzzy
-msgid " successfully"
-msgstr " con éxito"
-
-# "update_version_latest"
-#, fuzzy
-msgid "LATEST SCRIPT VERSION"
-msgstr "ÚLTIMA SCRIPT VERSIÓN"
-
-# "update_version_yours"
-#, fuzzy
-msgid "YOUR SCRIPT VERSION"
-msgstr "SU SCRIPT VERSIÓN"
-
-# "update_was"
-# Used with "created", "deleted" and "patched" to affirm them ({x} will be substituted with one of those words by the program; don't remove it). Useful for languages that make use of a specific particle or word to affirm a verb which is separate from its negative (or "NOT") form (such as Japanese, for example). Because we don't use this in English (the source language), only the {x} exists. You won't need to translate this if your language also doesn't use this.
-#, fuzzy
-msgid "{x}"
-msgstr "{x}"
-
-# "update_wrd1"
-#, fuzzy
-msgid "signatures"
-msgstr "firmas"
 
 # "upload_error_1"
 #, fuzzy
