--- a/PO/phpMussel-vi.po
+++ b/PO/phpMussel-vi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: vi\n"
-"Project-Id-Version: phpMussel v0.9.2\n"
+"Project-Id-Version: phpMussel v1.0.0\n"
 
 # "bad_command"
 msgid "I don't understand that command, sorry."
@@ -17,7 +17,7 @@ msgstr "Xin lỗi, tôi không hiểu câu lệnh này."
 # "cli_commands"
 # This is a list of commands supplied to the user by the program. Only change command descriptions! Don't change command aliases/names!
 msgid " q\n - Quit CLI.\n - Aliases: quit, exit.\n md5_file\n - Generate MD5 signatures from files [Syntax: md5_file filename].\n - Alias: m.\n md5\n - Generate MD5 signature from string [Syntax: md5 string].\n hex_encode\n - Convert binary string to hexadecimal [Syntax: hex_encode string].\n - Alias: x.\n hex_decode\n - Convert hexadecimal to binary string [Syntax: hex_decode string].\n base64_encode\n - Convert binary string to base64 string [Syntax: base64_encode string].\n - Alias: b.\n base64_decode\n - Convert base64 string to binary string [Syntax: base64_decode string].\n scan\n - Scan file or directory [Syntax: scan filename].\n - Alias: s.\n update\n - Update phpMussel.\n - Alias: u.\n c\n - Print this command list.\n"
-msgstr " q\n – Thoát ra CLI.\n - Bí danh: quit, exit.\n md5_file\n - Phát ra MD5 chử ký từ tài liệu [Syntax: md5_file filename].\n – Bí danh: m.\n md5\n – Phát ra MD5 chử ký từ dây [Syntax: md5 string].\n hex_encode\n - Chuyển đổi dây nhị phân thành hệ thập lục phân [Syntax: hex_encode string].\n – Bí danh: x.\n hex_decode\n - Chuyển đổi hệ thập lục phân thành dây nhị phân [Syntax: hex_decode string].\n base64_encode\n – Chuyển đổi dây nhị phân thành dây base64 [Syntax: base64_encode string].\n – Bí danh: b.\n base64_decode\n – Chuyển đổi dây base64 thành dây nhị phân [Syntax: base64_decode string].\n scan\n – Xem tài liệu hoạc hồ sơ [Syntax: scan filename].\n – Bí danh: s.\n update\n – Cập nhật phpMussel.\n – Bí danh: u.\n c\n – In danh sách lệnh này.\n"
+msgstr " q\n – Thoát ra CLI.\n - Bí danh: quit, exit.\n md5_file\n - Phát ra MD5 chử ký từ tập tin [Cú pháp: md5_file \"tên tập tin\"].\n – Bí danh: m.\n md5\n – Phát ra MD5 chử ký từ dây [Cú pháp: md5 string].\n hex_encode\n - Chuyển đổi dây nhị phân thành hệ thập lục phân [Cú pháp: hex_encode string].\n – Bí danh: x.\n hex_decode\n - Chuyển đổi hệ thập lục phân thành dây nhị phân [Cú pháp: hex_decode string].\n base64_encode\n – Chuyển đổi dây nhị phân thành dây base64 [Cú pháp: base64_encode string].\n – Bí danh: b.\n base64_decode\n – Chuyển đổi dây base64 thành dây nhị phân [Cú pháp: base64_decode string].\n scan\n – Xem tập tin hoạc hồ sơ [Cú pháp: scan \"tên tập tin\"].\n – Bí danh: s.\n c\n – In danh sách lệnh này.\n"
 
 # "cli_failed_to_complete"
 msgid "Failed to complete scanning process"
@@ -30,25 +30,20 @@ msgstr " không phải là file hoạc thư mục."
 
 # "cli_ln2"
 msgid " Thank you for using phpMussel, a PHP script designed to detect trojans,\n viruses, malware and other threats within files uploaded to your system\n wherever the script is hooked, based on the signatures of ClamAV and others.\n\n PHPMUSSEL COPYRIGHT 2013 and beyond GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
-msgstr " Cảm ơn bạn đã chọn phpMussel, một loại bản PHP được thiết kế để phát hiện\n trojan, vi rút, phần mềm đọc hại và những gì có thể gây nguy hiểm trong những\n các tài liệu tài lên trên máy của bạn. Bất cứ nơi nào mà bản đã được nối, dưa\n trên chử ký của ClamAV và những người khác.\n\n BẢN QUYỀN PHPMUSSEL 2013 và hơn GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
+msgstr " Cảm ơn bạn đã chọn phpMussel, một loại bản PHP được thiết kế để phát hiện\n trojan, vi rút, phần mềm đọc hại và những gì có thể gây nguy hiểm trong những\n các tập tin tài lên trên máy của bạn. Bất cứ nơi nào mà bản đã được nối, dưa\n trên chử ký của ClamAV và những người khác.\n\n BẢN QUYỀN PHPMUSSEL 2013 và hơn GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
 
 # "cli_ln3"
 msgid " Currently running phpMussel in CLI mode (command line interface).\n\n To scan a file or directory, type 'scan', followed by the name of the file or\n directory that you want phpMussel to scan and press Enter; Type 'c' and press\n Enter for a list of CLI mode commands; Type 'q' and press Enter to quit:"
-msgstr " phpMussel đang chạy trong chế độ CLI (command line interface).\n\n Đễ quét tài liệu hoạc thư mục, hảy đánh vào 'scan', sau đó tên của tài liệu\n hoạc thư mực mà bạn muốn phpMussel quét ròi bấm Enter; Đánh vào 'c' và bấm\n Enter đễ xem những loại chế độ CLI; Đánh 'q' và bấm Enter đế thoát ra:"
+msgstr " phpMussel đang chạy trong chế độ CLI (command line interface).\n\n Đễ quét tập tin hoạc thư mục, hảy đánh vào 'scan', sau đó tên của tập tin\n hoạc thư mực mà bạn muốn phpMussel quét ròi bấm Enter; Đánh vào 'c' và bấm\n Enter đễ xem những loại chế độ CLI; Đánh 'q' và bấm Enter đế thoát ra:"
 
 # "cli_pe1"
 msgid "Not a valid PE file!"
-msgstr "Tài liệu PE không hợp lệ!"
+msgstr "Tập tin PE không hợp lệ!"
 
 # "cli_pe2"
 msgid "PE Sections:"
 msgstr "Các loại PE:"
 
-# "cli_update_restart"
-msgid " Restarting phpMussel may be required before updates become apparent."
-msgstr " Có thể phải bắt đầu lại phpMussel trước khi cập nhật hiện lên."
-
-# "cli_working"
 msgid "In progress"
 msgstr "Đang trong quá trình"
 
@@ -58,7 +53,7 @@ msgstr "Cho phép các điều khiển khóa máy của phpMussel."
 
 # "core_scriptfile_missing"
 msgid "Core script file missing! Please reinstall phpMussel."
-msgstr "Bản tài liệu chính đang thiểu! Xin hảy cài đặt lại phpMussel."
+msgstr "Bản tập tin chính đang thiểu! Xin hảy cài đặt lại phpMussel."
 
 # "corrupted"
 msgid "Detected corrupted PE"
@@ -92,15 +87,15 @@ msgstr "Truy cập bị thức bại "
 
 # "file"
 msgid "File"
-msgstr "Tài liệu"
+msgstr "Tập tin"
 
 # "filesize_limit_exceeded"
 msgid "Filesize limit exceeded"
-msgstr "Cở của tài liệu đã bị quá giới hạn"
+msgstr "Cở của tập tin đã bị quá giới hạn"
 
 # "filetype_blacklisted"
 msgid "Filetype blacklisted"
-msgstr "Loại tài liệu đã vào danh sách đen"
+msgstr "Loại tập tin đã vào danh sách đen"
 
 # "finished"
 msgid "Finished"
@@ -133,7 +128,7 @@ msgstr "Trường hợp đã hoạt động! Xin hảy kiểm tra giây nói."
 
 # "invalid_file"
 msgid "Invalid file"
-msgstr "Tài liệu không hợp lệ"
+msgstr "Tập tin không hợp lệ"
 
 # "invalid_url"
 msgid "Invalid URL!"
@@ -145,7 +140,7 @@ msgstr "OK"
 
 # "only_allow_images"
 msgid "Uploading files other than images isn't permitted"
-msgstr "Ngoài ra hình ảnh, những tài liệu khác không được phép tải lên"
+msgstr "Ngoài ra hình ảnh, những tập tin khác không được phép tải lên"
 
 # "phpmussel_disabled"
 msgid "phpMussel disabled."
@@ -206,7 +201,7 @@ msgstr "Thất bại (phần nối cần thiết bị thiểu)!"
 
 # "scan_filename_manipulation_detected"
 msgid "Filename manipulation detected"
-msgstr "Sự thay đổi của tên tài liệu được phát hiện"
+msgstr "Sự thay đổi của tên tập tin được phát hiện"
 
 # "scan_map_corrupted"
 msgid "Signature map corrupted"
@@ -218,7 +213,7 @@ msgstr "Bản đồ biểu tượng bị mất"
 
 # "scan_missing_filename"
 msgid "Missing filename"
-msgstr "Tên tài liệu bị thiểu"
+msgstr "Tên tập tin bị thiểu"
 
 # "scan_not_archive"
 msgid "Failed (empty or not an archive)!"
@@ -234,23 +229,23 @@ msgstr "Đang đọc"
 
 # "scan_signature_file_corrupted"
 msgid "Signature file corrupted"
-msgstr "Tài liệu quan trọng bị lỗi"
+msgstr "Tập tin quan trọng bị lỗi"
 
 # "scan_signature_file_missing"
 msgid "Signature file missing"
-msgstr "Tài liệu quan trọng bị mất"
+msgstr "Tập tin quan trọng bị mất"
 
 # "scan_tampering"
 msgid "Detected potentially dangerous file tampering"
-msgstr "Tài liệu có khả năng gây nguy hiểm được phát hiện"
+msgstr "Tập tin có khả năng gây nguy hiểm được phát hiện"
 
 # "scan_unauthorised_upload"
 msgid "Unauthorised file upload manipulation detected"
-msgstr "Sự thay đỗi của tài liệu không được phép tải lên được phát hiện"
+msgstr "Sự thay đỗi của tập tin không được phép tải lên được phát hiện"
 
 # "scan_unauthorised_upload_or_misconfig"
 msgid "Unauthorised file upload manipulation or misconfiguration detected! "
-msgstr "Sự thay đỗi của tài liệu không được phép tải lên được phát hiện! "
+msgstr "Sự thay đỗi của tập tin không được phép tải lên được phát hiện! "
 
 # "started"
 msgid "Started"
@@ -260,147 +255,52 @@ msgstr "Đã bắt đầu"
 msgid "Too many URLs"
 msgstr "Quá nhiều URL"
 
-# "update_"
-msgid "phpMussel will now attempt to update itself."
-msgstr "phpMussel bây giờ sẽ tự cập nhật."
-
-# "update_available"
 msgid "A script update is available."
 msgstr "Cập nhật cho nguyên bản đã có."
 
-# "update_complete"
-msgid "Update check completed successfully."
-msgstr "Kiểm tra cho bản cập nhật đã hoàn thành."
-
-# "update_created"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% created".
-msgid "created"
-msgstr "đã tạo ra"
-
-# "update_deleted"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% deleted".
-msgid "deleted"
-msgstr "đã xóa"
-
-# "update_err1"
 msgid "Failed to update: 'update.dat' missing. Reinstall or update manually."
 msgstr "Cập nhật bị thất bại: 'update.dat' thiểu. Cài đặt lại hoặc cập nhật lại."
 
-# "update_err2"
-msgid "Failed to update: 'update.dat' does not contain any valid update sources. Please update manually."
-msgstr "Cập nhật bị thất bại: 'update.dat' không có nguồn bản cập nhật hợp lệ. Xin hảy tự cập nhật."
-
-# "update_err3"
 msgid "Possible hack or forgery detected in the update instructions supplied by the update source; Source may possibly be compromised. Please notify the script author. Updating manually is recommended."
 msgstr "Hack hoạc sự giả mạo được phát hiện trong hướng dẫn cập nhật cung cấp bởi nguồn cập nhật; Nguồn có thể bị xâm nhập. Xin liên lạc với tác giả của kịch bản. Đề nghị hảy tự cập nhật."
 
-# "update_err4"
-msgid "Missing checksum!"
-msgstr "Tổng kiểm tra bị mất!"
-
-# "update_err5"
 msgid "Missing data!"
-msgstr "Tài liệu bị mất!"
+msgstr "Tập tin bị mất!"
 
-# "update_err6"
-msgid "Bad data!"
-msgstr "Tài liệu xấu!"
-
-# "update_err7"
 msgid "Bad checksum!"
 msgstr "Tổng kiểm tra xấu!"
 
-# "update_failed"
-msgid "Failed."
-msgstr "Thất bại."
-
-# "update_fetch"
 msgid "Attempting to fetch version data from"
 msgstr "Đang tìm cách để lấy phiên bản dữ liệu từ"
 
-# "update_lock_detected"
-msgid "Update lock detected: Can't continue. Check for corrupt updates or try again later."
-msgstr "Thông tin khóa được phát hiện: Có thể không có thể tiếp tục. Tiềm các bản cập nhật sai hoạc thử lại sau."
-
-# "update_not"
-# Used with "created", "deleted" and "patched" to negate them. Only translate the "NOT", don't remove the "{x}". Rendered like "%FILENAME% NOT created", "%FILENAME% NOT deleted", "%FILENAME% NOT patched".
-msgid "NOT {x}"
-msgstr "KHÔNG {x}"
-
-# "update_not_available"
 msgid "No script update is available at this time."
 msgstr "Chưa có cập nhật cho kịch bản vào thời điểm này."
 
-# "update_not_possible"
-msgid "A script update is available, but can't be fully updated with this version of the update script. Please update manually."
-msgstr "Cập nhật cho kịch bản đã có, nhưng không thề cập nhật đầy đủ với phiên bản này. Xin hảy tự cập nhật."
-
-# "update_no_source"
 msgid "phpMussel has failed to update itself because it could not connect to a valid update source. Updating manually is recommended."
 msgstr "phpMussel đã thức bại trong sự cập nhật bởi vì không thể kết nối với nguồn cập nhật hợp lệ. Đề nghị hảy tự cập nhật."
 
-# "update_patched"
-# Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% patched".
-msgid "patched"
-msgstr "đã vá"
-
-# "update_scriptfile_missing"
-msgid " Update script file missing! Please reinstall phpMussel."
-msgstr " Kịch bản cập nhật tài liệu bị mất! Xin hảy cài phpMussel lại."
-
-# "update_seconds_elapsed"
-# Rendered alongside integer second timers, eg, "5 seconds elapsed".
-msgid " seconds elapsed"
-msgstr " giây trôi qua"
-
-# "update_signatures_available"
 msgid "A signatures update is available."
 msgstr "Cập nhật chử ký."
 
-# "update_signatures_latest"
-msgid "LATEST SIGNATURES"
-msgstr "CHỬ KÝ MỚI NHẤT"
-
-# "update_signatures_not_available"
 msgid "No signatures update is available at this time."
 msgstr "Không thế cập nhật chử ký vào lúc này."
 
-# "update_signatures_yours"
-msgid "YOUR SIGNATURES"
-msgstr "CHỬ KÝ CỦA BẠN"
-
-# "update_success"
 msgid "Success."
 msgstr "Thành công."
 
-# "update_successfully"
-msgid " successfully"
-msgstr " thành công"
-
-# "update_version_latest"
 msgid "LATEST SCRIPT VERSION"
 msgstr "PHIÊN BẢN MỚI NHẤT"
 
-# "update_version_yours"
-msgid "YOUR SCRIPT VERSION"
-msgstr "PHIÊN BẢN CỦA BẠN"
-
-# "update_was"
-# Used with "created", "deleted" and "patched" to affirm them ({x} will be substituted with one of those words by the program; don't remove it). Useful for languages that make use of a specific particle or word to affirm a verb which is separate from its negative (or "NOT") form (such as Japanese, for example). Because we don't use this in English (the source language), only the {x} exists. You won't need to translate this if your language also doesn't use this.
-msgid "{x}"
-msgstr "{x}"
-
-# "update_wrd1"
 msgid "signatures"
 msgstr "Những chữ ký"
 
 # "upload_error_1"
 msgid "Filesize exceeds the upload_max_filesize directive. "
-msgstr "Cỡ của tài liệu quá giới hạn upload_max_filesize chỉ dẫn. "
+msgstr "Cỡ của tập tin quá giới hạn upload_max_filesize chỉ dẫn. "
 
 # "upload_error_2"
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "Cỡ của tài liệu quá giới hạn của cỡ file chỉ định. "
+msgstr "Cỡ của tập tin quá giới hạn của cỡ file chỉ định. "
 
 # "upload_error_34"
 msgid "Upload failure! Please contact the hostmaster for assistance! "
